--- a/index.css
+++ b/index.css
@@ -1,4 +1,48 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Karla', sans-serif;
+}
+
+h2{
+    margin-bottom: 40px;
+}
+
+.content{
+    text-align: center;
+    width: 550px;
+    height: 550px;
+    margin: 0 auto;
+}
+
+
+.input-block{
+    height: 207px;
+    background: linear-gradient(246.26deg, #585DFE 0%, #FB3796 100%);
+    color: white;
+    padding: 53px 53px;
+}
+
+#user-input{
+    
+    font-size: 98px;
+    display: block;
+    margin: 0px auto;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    
+}
+
+
+.result-block{
+    background-color: #1F2937;
+    height: 290px;
+}
+.result-block p {
+    margin: 0;
+    color: white;
+}
+.result-text{
+    color: #D2D2D2;
 }
